feat: lesson 2
